Arrumei um negócio que estava me incomodando desde sempre

--- a/site/index.html
+++ b/site/index.html
@@ -85,7 +85,7 @@
 	<h2>ALBUMS</h2>
 
 
-<div class="capas">
+<div class="capas mx-auto">
 <figure>
 	<img src="../design/fonts/lorde/album1.jpg">
 	<figurecaption class="paragrafo-escuro ">
