--- a/site/index.html
+++ b/site/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
 	<title>LORDE</title>
@@ -85,7 +85,7 @@
 	<h2>ALBUMS</h2>
 
 
-<div class="capas mx-auto">
+<div class="capas">
 <figure>
 	<img src="../design/fonts/lorde/album1.jpg">
 	<figurecaption class="paragrafo-escuro ">
